[package]
name = "rust-downloader"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "grab"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.13", features = ["stream"] }
tokio = { version = "1.0", features = ["full"] }
indicatif = "0.18"
clap = { version = "4.0", features = ["derive"] }